--- a/index.html
+++ b/index.html
@@ -519,23 +519,11 @@
                 name: "餐饮",
                 color: "#FF9AA2",
                 options: [
-                        "火锅", "日料", "烧烤", "西餐", "川菜", "粤菜", "湘菜", "鲁菜", "浙菜", "苏菜", 
-                        "闽菜", "徽菜", "京菜", "沪菜", "东北菜", "西北菜", "云南菜", "贵州菜", "江西菜", 
-                        "湖北菜", "台湾菜", "串串香", "麻辣烫", "羊蝎子", "潮汕牛肉火锅", "韩式火锅", 
-                        "日式火锅", "泰式火锅", "粥底火锅", "自助餐", "小龙虾", "烤鱼", "酸菜鱼", 
-                        "寿司", "刺身", "拉面", "居酒屋", "烧鸟", "天妇罗", "铁板烧", "烤肉", "韩式烤肉", 
-                        "巴西烤肉", "新疆烧烤", "海鲜烧烤", "牛排", "意大利菜", "法国菜", "西班牙菜", 
-                        "德国菜", "墨西哥菜", "东南亚菜", "泰国菜", "越南菜", "新加坡菜", "印度菜", 
-                        "土耳其菜", "中东菜", "披萨", "汉堡", "三明治", "沙拉", "轻食", "咖啡厅", 
-                        "甜品", "奶茶", "果汁", "面包甜点", "炸鸡", "烤鸭", "卤味", "小吃", "快餐", 
-                        "家常菜", "私房菜", "农家菜", "素食", "海鲜", "日式拉面", "咖喱", "盖浇饭", 
-                        "煲仔饭", "米线", "饺子", "包子", "生煎", "锅贴", "煎饼", "油条", "豆浆", "粥", 
-                        "面条", "刀削面", "重庆小面", "凉皮", "肉夹馍", "驴肉火烧", "臭豆腐", "螺蛳粉", 
-                        "麻辣香锅", "干锅", "冒菜", "钵钵鸡", "冷锅串串", "兔头", "牛蛙", "蟹粉小笼", 
-                        "烧腊", "肠粉", "叉烧", "烧鹅", "白切鸡", "椰子鸡", "猪肚鸡", "砂锅粥", 
-                        "潮汕砂锅", "打边炉", "佛跳墙", "过桥米线", "汽锅鸡", "云南米线", "酸汤鱼", 
-                        "苗家菜", "贵州酸汤", "腊味", "江西瓦罐汤", "湖北热干面", "三鲜豆皮", 
-                        "台湾卤肉饭", "蚵仔煎", "盐酥鸡", "珍珠奶茶", "刨冰", "绵绵冰"
+        "火锅", "日料", "烧烤", "西餐", "川菜", "粤菜", 
+        "湘菜", "鲁菜", "东北菜", "云南菜", "新疆菜",
+        "小龙虾", "烤鱼", "自助餐", "韩式烤肉", "泰国菜",
+        "越南菜", "印度菜", "披萨", "汉堡", "咖啡厅",
+        "甜品", "奶茶", "小吃", "快餐", "素食"]
             },
             {
                 id: 2,
@@ -916,4 +904,5 @@
     </script>
 </body>
 </html>
+
 
