--- a/index.html
+++ b/index.html
@@ -530,14 +530,33 @@
                 id: 2,
                 name: "活动",
                 color: "#FFB7B2",
-                options: ["爬山", "看电影", "KTV", "桌游", "游泳", "露营"]
+                options: [
+        "爬山", "看电影", "KTV", "桌游", "游泳", "露营",
+        "逛公园", "游乐场", "密室逃脱", "DIY手工", "陶艺体验",
+        "油画体验", "烘焙课程", "双人瑜伽", "温泉", "看日出日落",
+        "骑单车", "放风筝", "野餐", "逛书店", "听音乐会",
+        "看话剧", "逛博物馆", "电玩城", "卡丁车", "射箭",
+        "溜冰", "滑雪", "划船", "钓鱼", "逛花市",
+        "逛宜家", "拍情侣照", "做志愿者", "逛夜市", "坐摩天轮",
+        "看烟花", "星座观测", "植物园", "动物园", "水族馆",
+        "短途旅行", "城市漫步", "探店打卡", "逛超市", "做饭比赛"
+    ]
             },
             {
-                id: 3,
-                name: "电影",
-                color: "#FFDAC1",
-                options: ["科幻片", "喜剧片", "动作片", "爱情片", "恐怖片", "动画片"]
-            }
+    id: 3,
+    name: "电影",
+    color: "#FFDAC1",
+    options: [
+        "科幻片", "喜剧片", "动作片", "爱情片", "恐怖片",
+        "动画片", "悬疑片", "文艺片", "纪录片", "奇幻片",
+        "战争片", "历史片", "犯罪片", "惊悚片", "歌舞片",
+        "黑色幽默片", "公路片", "青春片", "家庭片", "体育片",
+        "武侠片", "警匪片", "谍战片", "丧尸片", "吸血鬼片",
+        "怪兽片", "灾难片", "西部片", "音乐片", "传记片",
+        "心理片", "伦理片", "情色片", "cult片", "默片",
+        "短片", "实验电影", "儿童片", "贺岁片", "主旋律片"
+    ]
+}
         ];
         
         // 当前选中的类别
@@ -905,6 +924,7 @@
     </script>
 </body>
 </html>
+
 
 
 
